# DocMind

./: .gitignore  pyproject.toml
pdf-rag-copilot/: app.py  requirements.txt
pdf-rag-copilot/src/: database.py  eval.py  llm.py  memory.py  parser.py  reranker.py
