[project]
name = "c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dashscope>=1.26.2",
    "datasets>=5.0.0",
    "docling>=2.109.0",
    "flagembedding>=1.4.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "marker-pdf>=1.6.1",
    "notebook>=7.6.0",
    "python-dotenv>=1.2.2",
    "ragas<0.3",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
]
